--- a/comp2139/COMP2139/Views/Home/About.cshtml
+++ b/comp2139/COMP2139/Views/Home/About.cshtml
@@ -3,10 +3,10 @@
     Layout = "_Layout";
 
     // Define profile variables 
-    var name = "Kamel Baalbaki";
-    var studentNumber = "101496645";
+    var name = "Parvkumar Mehta";
+    var studentNumber = "101501920";
     var courseCode = "COMP2139";
-    var courseSection = "50272";
+    var courseSection = "50259";
     
 }
 
